--- a/templates/search.html
+++ b/templates/search.html
@@ -120,7 +120,7 @@
   function drawLine() {
     var data = new google.visualization.DataTable();
     data.addColumn('string', 'Date');
-    data.addColumn('number', 'Sentiment');
+    data.addColumn('number', 'Tweets');
     data.addRows([
       {% for time in activity_count[:5]: %}
       ['{{ time[0] }}', {{ time[1] }}],
@@ -133,7 +133,7 @@
       chartArea:{left: 60, top: 40, width: "90%", height: "70%"}
     };
 
-    var chart = new google.visualization.LineChart(document.getElementById('sentiment_graph'));
+    var chart = new google.visualization.LineChart(document.getElementById('activity_graph'));
       chart.draw(data, options);
     }  
 </script>
@@ -142,7 +142,7 @@
 <div id="user_count"></div>
 <div id="url_count"></div>
 <div id="sentiment"></div>
-<div id="sentiment_graph"></div>
+<div id="activity_graph"></div>
 
 {% print tweets|length, " sample tweets"  %}
 
