--- a/templates/report.html
+++ b/templates/report.html
@@ -98,7 +98,7 @@ The following table shows a good disection of search and social search [3].
 2. Literature Review
 ====================
 
-2.1 TweetMotif: Exploratory Search and Topic Summarization for Twitter [4]
+2.1 TweetMotif: Exploratory Search and Topic Summarization for Twitter
 ----------------
 
 2.2 #TwitterSearch: A Comparison of Microblog Search and Web Search
