--- a/templates/search.html
+++ b/templates/search.html
@@ -210,7 +210,7 @@
       </div>
 
       <div class="span12">
-      <h3><span class="name">{{ tweet['from_user_name'] }} <small class="username">{{ "@" + tweet['from_user'] }}</small></span><span class="timesince">{{ tweet['created_at']|time_since }}</span><span style="" class="time">{{ tweet['created_at'] }}</span></h3>
+      <h3><span class="name">{{ tweet['from_user_name'] }} <small class="username">{{ "@" + tweet['from_user'] }}</small></span><span class="timesince">{{ tweet['created_at']|time_since }}</span><span style="display:none;" class="time">{{ tweet['created_at'] }}</span></h3>
       <p class="{{ tweet|sentiment_highlight }}"><span style="display:none;" class="sentiment">{{ tweet|state_sentiment }}</span><span class="description">{{ tweet['text']|autolink|safe }}</span></p>
     </div>
     </li>
