--- a/templates/search.html
+++ b/templates/search.html
@@ -174,7 +174,7 @@
   }  
 </script>
 
-<div style="position:absolute; left:0; top:50px;">{% print params['tweets']|length, " sample tweets"  %}</div>
+<div style="display:none; position:absolute; left:0; top:50px;">{% print params['tweets']|length, " sample tweets"  %}</div>
 
 <div id="tag_count"></div>
 <div id="user_count"></div>
