remove report link

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,6 @@
         <a class="brand" href="/"><span class="blue">#</span>tweetsvu</a>
         <ul class="nav">
           <li class="active"><a href="/">App</a></li>
-          <li><a href="/report">Report</a></li>
         </ul>
         
         <form class="pull-right" action="/search" method="get">
@@ -37,6 +36,21 @@
       {% endblock %}
     </div> <!-- end of .content -->
   </div> <!-- end of .container -->
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-30488063-1']);
+  _gaq.push(['_setDomainName', 'tweetsvu.com']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
 
