--- a/templates/search.html
+++ b/templates/search.html
@@ -153,7 +153,8 @@
     
     google.visualization.events.addListener(chart, 'rangechange', rangeChanged);
 
-    function rangeChanged(range){ 
+    function rangeChanged(range){
+      featureList = originalList;
       start = range.start
       end = range.end
       var startdate = new Date(start);
@@ -168,7 +169,11 @@
         }
       });
 
-      
+      var options = {
+        valueNames: [ 'sentiment', 'name', 'description', 'time', 'username' ]
+      };
+
+      featureList = new List('results', options); 
     } 
     
   }  
@@ -228,6 +233,7 @@
       };
 
       var featureList = new List('results', options);
+      var originalList = featureList;
 
       $('#filter-positive').click(function() {
           featureList.filter(function(values) {
